# binarybit

./: Cargo.toml  README.md
src/: lib.rs  main.rs  uwu.rs
src/tests/: tests.rs
