[package]
name = "binarybit"
version = "0.1.1"
edition = "2021"
authors = ["Mateus Nunes <mateusnss@protonmail.ch>"]
description = "Library for Boolean algebra operations in Rust" 
license = "MIT"
repository = "https://github.com/nunniii/binarybit" 
# documentation = "https://docs.rs/binarybit" 


[dependencies]
